--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,42 @@
+# PlatformIO
 .pio
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
+
+# VS Code
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+.vscode/extensions.json
+
+# 編譯產物
+*.o
+*.a
+*.elf
+*.hex
+*.bin
+*.map
+
+# 作業系統
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# 臨時檔案
+*.tmp
+*.bak
+*.log
+
+# Python (PlatformIO 使用)
+__pycache__/
+*.py[cod]
+*$py.class
+
+# 環境設定（如果有機密資訊）
+.env
+secrets.h
