新增 MIT 授權文件，更新 README.md 以包含專案功能與狀態，並調整 platformio.ini 檔案以明確列出函式庫依賴

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+
+; 函式庫依賴（使用 GitHub URL）
+lib_deps = 
+    https://github.com/FastLED/FastLED.git#3.10.3
+
